# cosmic-python-rag

./: .gitignore  FUTURE_IMPROVEMENTS.md  README.md  pyproject.toml
cosmic-python-rag/: config.py  data.py  generation.py  indexing.py  main.py  retreival.py
cosmic-python-rag/data/: data_cleaning.py  embeddings.py  generate_summaries.py  keywords_extraction.py
notebooks/: main.ipynb
